--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ nav {
     border-style: solid;
     border-width: medium;
     border-radius: 6px;
+    width: 670px;
 }
 h1 {
     display: flex;
@@ -44,13 +45,19 @@ main {
     display: flex;
     border-width: medium;
     border-radius: 5px;
+    width: 670px;
+    position: relative;
+    left: 365px;
+    
+    
+    
 }
 .sidebar {
     margin-right: 25px;
     padding: 10px;
 }
 .sidebar-img {
-    width: 400px;
+    width: 200px;
     margin-left: 3%;
     margin-top: 3%;
     margin-bottom: 3%;
